--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 
 [dependencies]
 actix-rt = "1.0.0"
-actix-web = "2.0.0"
-diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
+actix-cors = "0.6.2"
+actix-web = "4"
+actix-web-lab = "0.18.5"
+diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
 dotenv = "0.15.0"
-env_logger = "0.7.1"
-juniper = "0.14.2"
-r2d2 = "0.8.8"
-serde_json = "1.0.44"
+env_logger = "0.9.0"
+juniper = "0.15.1"
